--- a/css/nicepage.css
+++ b/css/nicepage.css
@@ -15969,7 +15969,7 @@ div.u-video,
   text-decoration: none;
   border: 0 none transparent;
   outline-width: 0;
-  background-color: transparent;
+  background-color: #cdcfb540;
   margin: 0;
   -webkit-text-decoration-skip: objects;
 }
