--- a/css/Home.css
+++ b/css/Home.css
@@ -30,7 +30,7 @@
   font-weight: 700;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 30px auto 0;
-  padding: 74px 96px;
+  /*padding: 74px 96px;*/
 }
 
 .u-section-1 .u-container-layout-2 {
